Adjusting about view to fix sideboard in mobile-ui and to to fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,9 +4,7 @@
 
 .about-container {
     width: 90%;
-    margin: 30px 0px 0px 30px; /* add this line to center the container */
-    padding-top: 50px;
-    padding-bottom: 50px;
+    margin: 30px auto; /* add this line to center the container */
     background-color: #fff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
@@ -15,26 +13,43 @@
     justify-content: center; /* add this line to center the text vertically */
     align-items: center;
     min-width:auto;
+    min-height: 800px;
 }
 .about-text-container {
     width: 95%;
     margin: 5px; /* add this line to center the container */
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: transparent;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center; /* add this line to center the text vertically */
     align-items: center;
     min-width:auto;
+
 }
 
 .wrapper-container{
     margin: auto auto auto auto;
     align-items: center;
-    min-width: 400px;
+    min-width: 350px;
 }
+
+/* media query for smaller screens, such as mobile phones */
+@media (max-width: 480px) {
+    .container {
+        padding: 10px; /* reduce padding on small screens */
+        width: 90%;
+        min-width:auto;
+        margin: 30px auto;
+    }
+    wrapper-container{
+        padding: 10px; /* reduce padding on small screens */
+        width: 90%;
+        min-width:auto;
+        margin: 30px auto;
+    }
+}
+
+
 
 
 svg {
@@ -42,48 +57,6 @@ svg {
     height: 256px;
 }
 
-/* SMOKE */
-#smoke-1 {
-    stroke-dasharray: 0, 10;
-    animation: smoke 6s ease infinite;
-}
-
-#smoke-2 {
-    stroke-dasharray: 0, 10;
-    animation: smoke 6s 0.5s ease infinite;
-}
-
-@keyframes smoke {
-    0% { stroke-dasharray: 0, 10; }
-    50% { stroke-dasharray: 10, 0; }
-    100% { stroke-dasharray: 10, 0; opacity: 0; }
-}
-
-/* WRITING */
-#line-1 {
-    opacity: 0;
-    animation: writing 0.5s linear forwards;
-}
-
-#line-2 {
-    opacity: 0;
-    animation: writing 0.5s 1s linear forwards;
-}
-
-#line-3 {
-    opacity: 0;
-    animation: writing 0.5s 1.5s linear forwards;
-}
-
-#line-4 {
-    opacity: 0;
-    animation: writing 0.5s 2s linear forwards;
-}
-
-@keyframes writing {
-    0% { width: 0px; opacity: 1;}
-    100% { width: 14px; opacity: 1;}
-}
 
 .navbar-icon-container{
     padding-top: 30px;
